human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_39.wast
(assert_malformed
  (module quote "(func (param i32) (result i32) loop (param $x i32) end)")
  "unexpected token"
)